@@ -1,3 +1,6 @@
+2008-09-09 mentaer <sstein@geo.uzh.ch>
+	added Larry's AutoAssignAttributePlugIn from ISA Tools
+	
 2008-09-09 beckerl <becker.larry@gmail.com>
       Enabled the Union check box when Get Distance from Attributes is checked.
       src/com/vividsolutions/jump/workbench/ui/plugin/analysis/BufferPlugIn.java
